# gmail-tui

./: .gitignore  pyproject.toml
src/gmail_tui/: __init__.py  auth.py  client.py  config.py  models.py
src/gmail_tui/tui/: app.py
src/gmail_tui/tui/screens/: home.py  inbox.py
