[project]
name = "gmail-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owen", email = "dinofire@tuta.io" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
gmail-tui = "gmail_tui:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
